--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -6,10 +6,10 @@
 <section class="contact default_bg" id="contact">
     <div class="ctnr reveal">
         <form name="contact" method="POST" data-netlify="true">
-            {contactPage == "true" ? (
-                <h1 class="title">Get in touch</h1>
-            ) : (
+            {contactPage != "true" ? (
                 <span class="title">Get in touch</span>
+            ) : (
+                <h1 class="title">Get in touch</h1>
             )}
 
             <div class="flex">
