--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,6 +31,7 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
             <a href="/FAQ/"><span></span>FAQ</a>
             <a href="/contact/"><span></span>Contact</a>
             <a href="/privacy-policy/"><span></span>Privacy Policy</a>
+            <a href="/jobs/"><span></span>Work with us</a>
         </nav>
 
         <div>
@@ -53,8 +54,8 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
     footer {
         background-color: var(--dark);
         color: var(--light);
-        padding: clamp(4rem, 13vw, 8rem) 0;
-        font-size: clamp(1rem,3.9vmin,1.7rem);
+        padding: clamp(4rem, 13vw, 7rem) 0;
+        font-size: clamp(1rem,3.9vmin,1.6rem);
         line-height: 1.5;
     }
 
@@ -98,7 +99,7 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
     footer nav {
         display: flex;
         flex-flow: row wrap;
-        gap: 1.2rem 2rem;
+        gap: 0.9rem 2rem;
         align-content: start;
         max-width: 35vmax;
     }
