--- a/src/pages/blog/[...category]/index.astro
+++ b/src/pages/blog/[...category]/index.astro
@@ -42,7 +42,7 @@ import { Schema } from "astro-seo-schema"
 
 				<h1 class="category_heading">{category == 'cleaning' ? "Cleaning" : category == 'health-and-environment' ? "Health & Environment" : category == 'efficiency' ? "Efficiency" : null}</h1>
 
-				<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore similique nisi culpa, voluptatum possimus veritatis corrupti.</h2>
+				<!-- <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore similique nisi culpa, voluptatum possimus veritatis corrupti.</h2> -->
 
 				<a href="#posts" class="cta" aria-label="Check our posts">Check Posts</a>
 			</div>
@@ -51,11 +51,11 @@ import { Schema } from "astro-seo-schema"
 		</div>
 	</section>
 
-	<div class="intro_copy">
+	<!-- <div class="intro_copy">
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, <b>nascetur ridiculus mus</b>. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 
 		<p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. <strong>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</strong> Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. <b>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</b> Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget</p>
-	</div>
+	</div> -->
 
 	<div class="category_posts_ctnr center_base_width">
 		<ul class="posts scroll_margin_top" id="posts">
@@ -103,7 +103,7 @@ import { Schema } from "astro-seo-schema"
 		</ul>
 	</div>
 
-	<EndingBlogNav category={category}/>
+	<!-- <EndingBlogNav category={category}/> -->
 
     <Schema
         item={{
