--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -36,7 +36,7 @@ import { Schema } from "astro-seo-schema"
 			</div>
 		</section>
 
-		<div class="intro_copy">
+		<!-- <div class="intro_copy">
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, <b>nascetur ridiculus mus</b>. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 	
 			<p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. <strong>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</strong> Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. <b>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</b> Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget</p>
@@ -47,11 +47,11 @@ import { Schema } from "astro-seo-schema"
 				<a href="#health-and-environment">Health & Environment posts</a>
 				<a href="#efficiency">Efficiency</a>
 			</div>
-		</div>
+		</div> -->
 		
 		<section class="scroll_margin_top" id="posts">
 			<div class="center_base_width">
-				<div class="subset scroll_margin_top" id="cleaning">
+				<!-- <div class="subset scroll_margin_top" id="cleaning">
 					<a href="/blog/cleaning/" class="caption">Cleaning</a>
 
 					<ul class="posts">
@@ -99,7 +99,7 @@ import { Schema } from "astro-seo-schema"
 					</ul>
 
 					<a href="/blog/cleaning" class="check_all">Check All Cleaning Posts</a>
-				</div>
+				</div> -->
 
 				<div class="subset scroll_margin_top" id="health-and-environment">
 					<a href="/blog/health-and-environment/" class="caption">Health & Environment</a>
@@ -148,10 +148,10 @@ import { Schema } from "astro-seo-schema"
 						}
 					</ul>
 	
-					<a href="/blog/health-and-environment" class="check_all">Check All Health & Environment Posts</a>
+					<!-- <a href="/blog/health-and-environment" class="check_all">Check All Health & Environment Posts</a> -->
 				</div>
 
-				<div class="subset scroll_margin_top" id="efficiency">
+				<!-- <div class="subset scroll_margin_top" id="efficiency">
 					<a href="/blog/efficiency/" class="caption">Efficiency</a>
 
 					<ul class="posts">
@@ -199,7 +199,7 @@ import { Schema } from "astro-seo-schema"
 					</ul>
 	
 					<a href="/blog/efficiency" class="check_all">Check All Efficiency Posts</a>
-				</div>
+				</div> -->
 			</div>
 		</section>
 	</main>
