--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -8,7 +8,7 @@ import ContactSection from "../../components/ContactSection.astro";
 import { SITE_DESCRIPTION, SITE_KEYWORDS, CONTACT_TITLE, CONTACT_DESCRIPTION, CONTACT_KEYWORDS } from "../../consts";
 ---
 
-<BaseLayout title={CONTACT_TITLE} description={CONTACT_DESCRIPTION ? CONTACT_DESCRIPTION : SITE_DESCRIPTION} keywords={CONTACT_KEYWORDS ? CONTACT_KEYWORDS : SITE_KEYWORDS}>
+<BaseLayout title={CONTACT_TITLE} description={CONTACT_DESCRIPTION ? CONTACT_DESCRIPTION : SITE_DESCRIPTION} keywords={CONTACT_KEYWORDS ? CONTACT_KEYWORDS : SITE_KEYWORDS} endContactSection="false">
     <main>
         <ContactSection contactPage="true" />
     </main>
