--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -10,7 +10,7 @@ import { JOBS_TITLE, JOBS_DESCRIPTION, JOBS_KEYWORDS, JOBS_H1, JOBS_TEXT_BODY } 
 ---
 
 
-<BaseLayout title={JOBS_TITLE} description={JOBS_DESCRIPTION} keywords={JOBS_KEYWORDS}>
+<BaseLayout title={JOBS_TITLE} description={JOBS_DESCRIPTION} keywords={JOBS_KEYWORDS} endContactSection="false">
     <main>
         <section class="intro">
             <div class="ctnr">
