--- a/src/pages/sectors/[...slug].astro
+++ b/src/pages/sectors/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-import SubpageLayout from "../../layouts/BaseLayout.astro";
+import Layout from "../../layouts/BaseLayout.astro";
 import ContactSection from "../../components/ContactSection.astro"
 import BackBt from "../../components/BackBt.astro";
 import BlogStripe from "../../components/BlogStripe.astro";
@@ -54,7 +54,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
 }
 ---
 
-<SubpageLayout {...sector.data}>
+<Layout {...sector.data}>
     <section class="intro">
         <BackBt url={`/sectors/#${(sector.data.title).toLowerCase().replace(/\s+/g, '-')}`} label="Other sectors"/>
 
@@ -103,7 +103,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                                     <p class="description">{filteredSector[firstRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/sectors/${filteredSector[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[firstRandomPos].data.title}`>About the Sector</a>
+                                <a href={`/sectors/${filteredSector[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[firstRandomPos].data.title}`>About the sector</a>
                             </div>
                         </div>
 
@@ -125,7 +125,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                                     <p class="description">{filteredSector[secondRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/sectors/${filteredSector[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[secondRandomPos].data.title}`>About the Sector</a>
+                                <a href={`/sectors/${filteredSector[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[secondRandomPos].data.title}`>About the sector</a>
                             </div>
                         </div>
 
@@ -147,7 +147,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                                     <p class="description">{filteredSector[thirdRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/sectors/${filteredSector[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[thirdRandomPos].data.title}`>About the Sector</a>
+                                <a href={`/sectors/${filteredSector[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[thirdRandomPos].data.title}`>About the sector</a>
                             </div>
                         </div>
 
@@ -161,8 +161,6 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
     
         <a href="/sectors/" class="back" aria-label="Check All Sectors">All Sectors</a>
     </div>
-
-    <ContactSection />
 
     <BlogStripe/>
 
@@ -186,4 +184,4 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
             }
         }}
     />
-</SubpageLayout>
+</Layout>
