--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -75,7 +75,7 @@ import { SITE_KEYWORDS, SECTORS_TITLE, SECTORS_DESCRIPTION, SECTORS_KEYWORDS, SE
         </div>
     </main>
 
-    <ContactSection contactPage="false" />
+    <ContactSection/>
 
     <BlogStripe/>
 </BaseLayout>
