--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-import SubpageLayout from "../../layouts/BaseLayout.astro";
+import Layout from "../../layouts/BaseLayout.astro";
 import ContactSection from "../../components/ContactSection.astro"
 import BlogStripe from "../../components/BlogStripe.astro";
 
@@ -56,7 +56,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
 
 ---
 
-<SubpageLayout {...service.data}>
+<Layout {...service.data}>
     <section class="intro">
         <BackBt url={`/services/#${(service.data.title).toLowerCase().replace(/\s+/g, '-')}`} label="Other services"/>
 
@@ -109,7 +109,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[firstRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[firstRandomPos].data.title}`>About the Service</a>
+                                <a href={`/services/${filteredServices[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[firstRandomPos].data.title}`>About the service</a>
                             </div>
                         </div>
 
@@ -131,7 +131,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[secondRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[secondRandomPos].data.title}`>About the Service</a>
+                                <a href={`/services/${filteredServices[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[secondRandomPos].data.title}`>About the service</a>
                             </div>
                         </div>
 
@@ -153,7 +153,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[thirdRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[thirdRandomPos].data.title}`>About the Service</a>
+                                <a href={`/services/${filteredServices[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[thirdRandomPos].data.title}`>About the service</a>
                             </div>
                         </div>
 
@@ -167,8 +167,6 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
     
         <a href="/services/" class="back" aria-label="Check All Services">All Services</a>
     </div>
-
-    <ContactSection contactPage="false" />
 
     <BlogStripe/>
 
@@ -184,4 +182,4 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
             },
         }}
     />
-</SubpageLayout>
+</Layout>
