--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -435,6 +435,11 @@ picture img {
 
 @media (min-width:850px) {
 
+    .intro.squares_bg {
+        background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Camada_1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 25.5 25.5'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:none;stroke:%23fff;stroke-miterlimit:10;%7D%3C/style%3E%3C/defs%3E%3Cpolyline class='cls-1' points='25 0 25 25 0 25'/%3E%3C/svg%3E"), linear-gradient(175deg, transparent 60%, var(--light));
+        background-size: clamp(1.2rem, 2vw, 2rem), cover;
+    }    
+
     .panel > .ctnr {
         flex-direction: row;
         width: calc(100% - (100% - var(--base-width)) / 2);
