--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -4,7 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import '../../styles/subpages.css'
 
 import ContactSection from "../../components/ContactSection.astro"
-import ContactBox from '../../components/ContactBox.astro';
+import InfoBox from '../../components/InfoBox.astro';
 
 import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H1, LOCATIONS_INTRO_DESCRIPTION } from "../../consts";
 ---
@@ -28,7 +28,7 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
             <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
 
             <div class="contact_box_ctnr reveal">
-                <ContactBox />
+                <InfoBox />
             </div>
             
             <div class="iframe_ctnr">
