--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import ContactBox from "./ContactBox.astro";
+import InfoBox from "./InfoBox.astro";
 
 import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
 ---
@@ -35,7 +35,7 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
         </nav>
 
         <div>
-            <ContactBox />
+            <InfoBox />
 
             <hr>
 
