--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/BaseLayout.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ContactSection from "../components/ContactSection.astro"
-import ContactBox from "../components/ContactBox.astro";
+import InfoBox from "../components/InfoBox.astro";
 import BlogStripe from "../components/BlogStripe.astro";
 import FAQ from "../components/FAQ.astro";
 import OurPeople from "../components/OurPeople.astro";
@@ -199,7 +199,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 					</div>
 
 					<div class="contact_ctnr">
-						<ContactBox />
+						<InfoBox />
 					</div>
 				</div>
 
