--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -194,7 +194,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						<div class="iframe_ctnr">
 							<noscript>You need to enable JavaScript on your browser to see this content.</noscript>
 	
-							<iframe width="100%" height="100%" title="The Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+							<iframe width="100%" height="100%" title="The Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.4890261846244!2d-0.08541909999999998!3d51.52258979999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761caefea868c7%3A0x2f921afb71cd76e2!2s6-8%20Bonhill%20St%2C%20London%20EC2A%204BX%2C%20UK!5e0!3m2!1sen!2sbr!4v1704802091222!5m2!1sen!2sbr"></iframe>
 						</div>
 					</div>
 
