--- a/src/pages/sectors/[...slug].astro
+++ b/src/pages/sectors/[...slug].astro
@@ -77,7 +77,7 @@ import { MIN_SERVICE_HOURS, SERVICE_PRICE } from '../../consts'
                 <!-- {sector.data.minWeeklyHours && sector.data.hourlyPrice ? ( -->
                     <PricingCTA
                         intro={sector.data.pricingParagraphIntro}
-                        job="services"
+                        job="cleaning services"
                         minimumHours={MIN_SERVICE_HOURS}
                         price={SERVICE_PRICE}
                         />
