--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -32,7 +32,7 @@ import { Schema } from "astro-seo-schema"
 					<a href="#posts" class="cta light" aria-label="Check our posts">Check Posts</a>
 				</div>
 
-				<img src={posts[0].data.heroImage} class="reveal" alt="Hero blog image">
+				<img src={posts[0].data.heroImage} class="reveal" alt="Hero blog image" draggable="false">
 			</div>
 		</section>
 
@@ -114,7 +114,7 @@ import { Schema } from "astro-seo-schema"
 											<div class="content">
 												<div class="ctnr">
 													<div class="over_heading">
-														<div class="author">{post.data.authorImage ? (<img src={post.data.authorImage} alt={`${post.data.author} profile picture`}/>) : "by"} <cite>{post.data.author}</cite></div>
+														<div class="author">{post.data.authorImage ? (<img src={post.data.authorImage} alt={`${post.data.author} profile picture`} draggable="false"/>) : "by"} <cite>{post.data.author}</cite></div>
 
 														<hr/>
 
@@ -138,7 +138,7 @@ import { Schema } from "astro-seo-schema"
 											</div>
 			
 											<a class="hero" href={`/blog/${post.slug}/`}>
-												<img src={post.data.heroImage} alt={post.data.description} loading="lazy"/>
+												<img src={post.data.heroImage} alt={post.data.description} loading="lazy" draggable="false"/>
 											</a>
 										</div>
 									</li>
