--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -32,7 +32,7 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
             </div>
             
             <div class="iframe_ctnr">
-                <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.4890261846244!2d-0.08541909999999998!3d51.52258979999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761caefea868c7%3A0x2f921afb71cd76e2!2s6-8%20Bonhill%20St%2C%20London%20EC2A%204BX%2C%20UK!5e0!3m2!1sen!2sbr!4v1704802091222!5m2!1sen!2sbr"></iframe>
+                <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d620.6199555189221!2d-0.10369063041918736!3d51.52275863801521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b51ade48153%3A0x3366ca220568fb14!2sSt%20John&#39;s%20Sq%2C%20London%2C%20UK!5e0!3m2!1sen!2sbr!4v1704919149041!5m2!1sen!2sbr"></iframe>
             </div>
         </div>
 
