Live Blog + Our Team

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,8 +26,10 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
             <a href="/"><span></span>Home</a>
             <a href="/services/"><span></span>Services</a>
             <a href="/sectors/"><span></span>Sectors</a>
+            <a href="/blog/"><span></span>Blog</a>
             <a href="/locations/"><span></span>Location</a>
             <a href="/about/"><span></span>About</a>
+            <a href="/team/"><span></span>Our Team</a>
             <a href="/FAQ/"><span></span>FAQ</a>
             <a href="/contact/"><span></span>Contact</a>
             <a href="/privacy-policy/"><span></span>Privacy Policy</a>
