--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -26,13 +26,11 @@ import { Schema } from "astro-seo-schema"
 			<div class="ctnr">
 				<div class="content reveal">
 					<h1 class="big"><sup>The Clean Network's </sup>Blog</h1>
-	
-					<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore similique nisi culpa, voluptatum possimus veritatis corrupti.</h2>
 
 					<a href="#posts" class="cta light" aria-label="Check our posts">Check Posts</a>
 				</div>
 
-				<img src={posts[0].data.heroImage} class="reveal" alt="Hero blog image" draggable="false">
+				<img src={posts[0].data.heroImage} alt="Hero blog image" draggable="false">
 			</div>
 		</section>
 
