--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -128,9 +128,13 @@ import { TEL, TEL_HREF } from "../consts";
                     </div>
                 </div> -->
 
+                <a href="/blog/">Blog</a>
+
                 <a href="/locations/">Location</a>
                 
                 <a href="/about/">About</a>
+                
+                <a href="/team/">Our Team</a>
 
                 <a href="/contact/">Contact</a>
 
@@ -522,7 +526,7 @@ import { TEL, TEL_HREF } from "../consts";
 
 
 
-    @media screen and (min-width: 1100px) {
+    @media screen and (min-width: 1200px) {
         .subnav .expand button,
         .hambt {
             display: none;
@@ -578,7 +582,7 @@ import { TEL, TEL_HREF } from "../consts";
             text-align: unset;
             justify-content: right;
             width: unset;
-            gap: clamp(0rem,calc(6vw - 5rem),3rem);
+            gap: clamp(0rem,calc(7vw - 8.5rem),2.6rem);
             align-items: center;
             height: 100%;
         }
