--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -74,7 +74,7 @@ import { SITE_DESCRIPTION, SITE_KEYWORDS, ABOUT_TITLE, ABOUT_DESCRIPTION, ABOUT_
                     </ul>
                 </div>
 
-                <div class="image reveal">
+                <div class="image">
                     <!-- <picture>
                         <source srcset="/images/office01.webp">
                         <img src="/images/office01.jpg" alt="The Clean Network logo">
