--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -143,7 +143,7 @@ video {
 }
 
 ::-webkit-scrollbar {
-    width: 2rem;
+    width: 2.2rem;
     height: 2rem;
 }
 
@@ -155,13 +155,16 @@ video {
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: var(--primary);
-    border-radius: 0.8rem 0 0 0.8rem;
-    -webkit-border-radius: 0.8rem 0 0 0.8rem;
-    -moz-border-radius: 0.8rem 0 0 0.8rem;
-    -ms-border-radius: 0.8rem 0 0 0.8rem;
-    -o-border-radius: 0.8rem 0 0 0.8rem;
-    border:0.6rem solid var(--light);
-    border-right: unset;
+    border-radius: 1.3rem;
+    -webkit-border-radius: 1.3rem;
+    -moz-border-radius: 1.3rem;
+    -ms-border-radius: 1.3rem;
+    -o-border-radius: 1.3rem;
+    border:0.7rem solid var(--light);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--primary-d);
 }
 
 main {
