--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -147,6 +147,8 @@ import { Schema } from "astro-seo-schema"
 					</ul>
 	
 					<!-- <a href="/blog/health-and-environment" class="check_all">Check All Health & Environment Posts</a> -->
+
+					<a href="/blog/1" class="check_all">Check All Posts</a>
 				</div>
 
 				<!-- <div class="subset scroll_margin_top" id="efficiency">
